# FermiOwnCommon

./: .gitignore  CMakeLists.txt  README.md  documentation.Doxyfile
apps/: CMakeLists.txt  ConfigMetropolisIsing.h  MetropolisIsing.cpp  MetropolisIsingStep.cpp  MetropolisIsingStep.h
src/: CMakeLists.txt
src/Actions/: CMakeLists.txt  IsingHamiltonian.cpp  IsingHamiltonian.h
src/Algorithms/: CMakeLists.txt  ConfigGenerator.cpp  ConfigGenerator.h  Metropolis.cpp  MetropolisStep.cpp  MetropolisStep.h
src/Data/: CMakeLists.txt  Field.cpp  Field.h  Lattice.cpp  Lattice.h
src/Math/: CliffordAlgebra.h  Constants.h
src/System/: CMakeLists.txt  ConfigMC.cpp  ConfigMC.h  Timer.cpp  Timer.h
test/: CMakeLists.txt  CliffordAlgebra_test.cpp  Field_test.cpp  Lattice_test.cpp  MetropolisStep_test.cpp  libconfig_test.cpp
